# Grey-Wolf-Optimizer-C-

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.0C056E4E582726D0.idx
